<resources>
    <string name="app_name">Amaro</string>
    <string name="continue_string">CONTINUE</string>
    <string name="profile_pic">Profile pic</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Your full name goes here</string>
    <string name="Birthday">Birthday</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Your phone number goes here</string>
    <string name="otp">OTP</string>
    <string name="otp_hint">OTP goes here</string>
    <string name="verify">VERIFY</string>
    <string name="book">BOOK APPOINTMENT</string>
    <string name="appoinment">APPOINTMENTS:0</string>
    <string name="doctor">Doctor</string>
    <string name="tony_stark">Dr.Tony Stark</string>
    <string name="doc1">Dr. Steve Becker</string>
    <string name="doc2">Dr. Sophia Aiden</string>
    <string name="doc3">Dr. Allison Reed</string>
    <string name="physician">Physician</string>
    <string name="neurologist">Neurologist</string>
    <string name="oncologist">Oncologist</string>
    <string name="nov_11">Nov 11</string>
    <string name="ten">10:00</string>
    <string name="eleven">11:00</string>
    <string name="twelve">12:00</string>
    <string name="fourteen">14:00</string>
    <string name="fifteen">15:00</string>
    <string name="sixteen">16:00</string>
    <string name="appointment">APPOINTMENTS:</string>

</resources>
