<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.amaro.amaro.DoctorList"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        >

        <ImageView
            android:id="@+id/doctorImage1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:src="@drawable/profpic"
            android:contentDescription="@string/doctor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:text="@string/doc1"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="#000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:text="@string/physician"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            android:textColor="#424242"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/doctorImage2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:src="@drawable/profpic"
            android:contentDescription="@string/doctor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:text="@string/doc2"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="#000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:text="@string/oncologist"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            android:textColor="#424242"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:layout_editor_absoluteX="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/doctorImage3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:src="@drawable/profpic"
            android:contentDescription="@string/doctor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:text="@string/doc3"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="#000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:text="@string/neurologist"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            android:textColor="#424242"
            />
    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>